# md2ipynb

./: LICENSE  README.md  instructions.md  notebook_converter.py  pyproject.toml
example/: text_processing_basics.md
example/text_processing_basics_reworked.ipynb/: text_processing_basics.ipynb
src/md2ipynb/: __init__.py  agents_quickstart.md  cli.py  config.py  converter.py  mcp_server.py
tests/: test_cli.py  test_config.py  test_converter.py
